--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "./bin/www",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "node .",
+    "clean": "trash public/*",
+    "predev": "npm run clean",
+    "dev": "webpack --config webpack.config.dev.js -w --devtool eval"
   },
   "author": "Alon Valadji",
   "license": "ISC",
@@ -38,6 +41,7 @@
     "ng-annotate-loader": "^0.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
+    "trash-cli": "^1.3.0",
     "webpack": "^1.13.1"
   }
 }
