--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node .",
     "clean": "trash dist/*",
     "predev": "npm run clean",
-    "dev": "webpack --config webpack.config.dev.js -w --devtool eval"
+    "dev": "webpack --config webpack.config.dev.js -w --devtool eval",
+    "prebuild": "npm run clean",
+    "build": "webpack --config webpack.config.prod.js -p --progress"
   },
   "author": "Alon Valadji",
   "license": "ISC",
