main state home state
basic layout for TEQ

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node .",
     "clean": "trash dist/*",
     "predev": "npm run clean",
-    "dev": "webpack --config webpack.config.dev.js -w --devtool eval",
+    "dev": "webpack --config webpack.config.dev.js -w --progress --devtool eval",
     "prebuild": "npm run clean",
     "build": "webpack --config webpack.config.prod.js -p --progress"
   },
@@ -37,9 +37,12 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.19.0",
     "jquery": "^2.2.4",
     "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "ng-annotate-loader": "^0.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
