--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "^2.0.0-alpha.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "express-session": "^1.13.0",
     "lodash": "^4.13.1",
     "mongoose": "^4.4.19",
     "morgan": "~1.6.1",
